--- a/style.css
+++ b/style.css
@@ -7,5 +7,11 @@ html,body{
 }
 
 .text-center{
-    color: white;
+    color: #04f318;
+}
+
+h1{
+    font-size: 33px;
+    text-align: center;
+    color: #09ff1e;
 }
